Added 3 recipes and modified index.html to show links

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 
 <body>
   <h1>Odin Recipes</h1>
-  <a href="./recipes/lasagna.html">Lasagna</a>
+  <ul>
+    <li><a href="./recipes/lasagna.html">
+        <h3>Lasagna</h3>
+      </a></li>
+    <li><a href="./recipes/pizza.html">
+        <h3>English Muffin Pizza</h3>
+      </a></li>
+    <li><a href="./recipes/ice-cream.html">
+        <h3>2-Ingredient Ice Cream</h3>
+      </a></li>
+  </ul>
 </body>
 
 </html>
