--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lasagna</title>
 </head>
+
 <body>
+  <a href="../index.html">...back to main</a>
   <h1>Lasagna</h1>
+  <img src="lasagna.jpeg" alt="Lasanga" width="400">
+  <h2>Description</h2>
+  <p>This is a faster, and less expensive lasagna.</p>
+  <ul>
+    <li><strong>Prep</strong>: 30 mins</li>
+    <li><strong>Cook</strong>: 30 mins</li>
+    <li><strong>Total</strong>: 1 hr</li>
+    <li><strong>Servings</strong>: 8</li>
+    <li><strong>Yield</strong>: 1 9x13 inch pan</li>
+  </ul>
+  <h2>Ingredients</h2>
+  <ul>
+    <li>1 (16 ounce) package of lasagna noodles</li>
+    <li>1 pound lean ground beef</li>
+    <li>salt and pepper to taste</li>
+    <li>1 (16 ounce) jar spaghetti sauce</li>
+    <li>1 clove garlic, minced</li>
+    <li>1/2 pound shredded mozzarella cheese</li>
+    <li>1/2 pound shredded Cheddar cheese</li>
+    <li>1 pint ricotta cheese</li>
+  </ul>
+  <h2>Directions</h2>
+  <ol>
+    <li>Bring a large pot of lightly salted water to a boil. Add pasta and cook for 8 to 10 minutes or until al dente: drain.</li>
+    <li>Preheat oven to 350 degrees F (175 degrees C). In a large skillet over medium-high heat, brown and season with salt and pepper; drain. Stir in spaghetti sauce and garlic and simmer 5 minutes.</li>
+    <li>In a medium bowl, combine mozzarella, Cheddar and ricotta; stir well. In 9x13 inch pan, alternate layers of noodles, meat mixture and cheese mixture until pan is filled.</li>
+    <li>Bake in preheated oven for 30 minutes, or until cheese is melted and bubbly.</li>
+  </ol>
 </body>
+
 </html>
