Added styles to all pages

--- a/index.html
+++ b/index.html
@@ -6,18 +6,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Recipes</title>
+  <link rel="stylesheet" href="./styles/main.css">
 </head>
 
 <body>
   <h1>Odin Recipes</h1>
   <ul>
-    <li><a href="./recipes/lasagna.html">
+    <li>
+      <img src="./images/lasagna.jpeg" width="200px" alt=""><a href="./recipes/lasagna.html">
         <h3>Lasagna</h3>
       </a></li>
-    <li><a href="./recipes/pizza.html">
+    <li>
+      <img src="./images/pizza.jpeg" width="200px" alt=""><a href="./recipes/pizza.html">
         <h3>English Muffin Pizza</h3>
       </a></li>
-    <li><a href="./recipes/ice-cream.html">
+    <li>
+      <img src="./images/ice-cream.jpeg" width="200px" alt=""><a href="./recipes/ice-cream.html">
         <h3>2-Ingredient Ice Cream</h3>
       </a></li>
   </ul>
