--- a/recipes/ice-cream.html
+++ b/recipes/ice-cream.html
@@ -6,12 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>2-Ingredient Ice Cream</title>
+  <link rel="stylesheet" href="../styles/recipes.css">
 </head>
 
 <body>
   <a href="../index.html">...back to main</a>
   <h1>2-Ingredient Ice Cream</h1>
-  <img src="ice-cream.jpeg" alt="Ice Cream" width="400">
+  <img src="../images/ice-cream.jpeg" alt="Ice Cream" width="400">
   <h2>Description</h2>
   <p>This is the easiest recipe for ice cream I have found. Add any extra ingredients (chocolate chips, caramel, vanilla
     bean, etc.) before freezing!</p>
@@ -29,7 +30,8 @@
   </ul>
   <h2>Directions</h2>
   <ol>
-    <li>Beat heavy cream in a bowl using an electric mixer until soft peaks form; add sweetened milk and beat until thick and well combined.</li>
+    <li>Beat heavy cream in a bowl using an electric mixer until soft peaks form; add sweetened milk and beat until
+      thick and well combined.</li>
     <li>Transfer mixture to a shallow container and cover with plastic wrap; freeze until solid, about 6 hours.</li>
   </ol>
 </body>
