--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,12 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lasagna</title>
+  <link rel="stylesheet" href="../styles/recipes.css">
 </head>
 
 <body>
   <a href="../index.html">...back to main</a>
   <h1>Lasagna</h1>
-  <img src="lasagna.jpeg" alt="Lasanga" width="400">
+  <img src="../images/lasagna.jpeg" alt="Lasanga" width="400">
   <h2>Description</h2>
   <p>This is a faster, and less expensive lasagna.</p>
   <ul>
