--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,12 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>English Muffin Pizza</title>
+  <link rel="stylesheet" href="../styles/recipes.css">
 </head>
 
 <body>
   <a href="../index.html">...back to main</a>
   <h1>English Muffin Pizza</h1>
-  <img src="pizza.jpeg" alt="English Muffin Pizza" width="400">
+  <img src="../images/pizza.jpeg" alt="English Muffin Pizza" width="400">
   <h2>Description</h2>
   <p>Fun little pizzas that are great for a quick meal or for a snack, kids birthdays, or parties. Always a big hit.</p>
   <ul>
