--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -10,34 +10,36 @@
 </head>
 
 <body>
-  <a href="../index.html">...back to main</a>
-  <h1>English Muffin Pizza</h1>
-  <img src="../images/pizza.jpeg" alt="English Muffin Pizza" width="400">
-  <h2>Description</h2>
-  <p>Fun little pizzas that are great for a quick meal or for a snack, kids birthdays, or parties. Always a big hit.</p>
-  <ul>
-    <li><strong>Prep</strong>: 20 mins</li>
-    <li><strong>Cook</strong>: 10 mins</li>
-    <li><strong>Total</strong>: 30 mins</li>
-    <li><strong>Servings</strong>: 12</li>
-    <li><strong>Yield</strong>: 12 pizzas</li>
-  </ul>
-  <h2>Ingredients</h2>
-  <ul>
-    <li>1 (12 ounce) package English muffins, split</li>
-    <li>1 (14 ounce) can pizza sauce</li>
-    <li>1 (8 ounce) package shredded mozzarella cheese</li>
-    <li>1 (8 ounce) package sliced pepperoni</li>
-    <li>1 (4 ounce) link cooked Italian sausage, sliced</li>
-  </ul>
-  <h2>Directions</h2>
-  <ol>
-    <li>Preheat oven to 350 degreese F (175 degrees C)</li>
-    <li>Arrange English muffin halves, cut-side up, on a baking sheet. Spoon 1 to 2 tablespoons pizza sauce onto each
-      English muffin; top with mozzarella cheese. Place pepperoni slices on 1/3 the pizzas and Italian sausage on 1/3
-      the English muffins, leaving the remaining 1/3 with just cheese.</li>
-    <li>Bake in the preheated oven until cheese is melted, about 10 minutes.</li>
-  </ol>
+  <main>
+    <a href="../index.html">...back to main</a>
+    <h1>English Muffin Pizza</h1>
+    <img src="../images/pizza.jpeg" alt="English Muffin Pizza" width="400">
+    <h2>Description</h2>
+    <p>Fun little pizzas that are great for a quick meal or for a snack, kids birthdays, or parties. Always a big hit.</p>
+    <ul class="desc">
+      <li><strong>Prep</strong>: 20 mins</li>
+      <li><strong>Cook</strong>: 10 mins</li>
+      <li><strong>Total</strong>: 30 mins</li>
+      <li><strong>Servings</strong>: 12</li>
+      <li><strong>Yield</strong>: 12 pizzas</li>
+    </ul>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>1 (12 ounce) package English muffins, split</li>
+      <li>1 (14 ounce) can pizza sauce</li>
+      <li>1 (8 ounce) package shredded mozzarella cheese</li>
+      <li>1 (8 ounce) package sliced pepperoni</li>
+      <li>1 (4 ounce) link cooked Italian sausage, sliced</li>
+    </ul>
+    <h2>Directions</h2>
+    <ol>
+      <li>Preheat oven to 350 degreese F (175 degrees C)</li>
+      <li>Arrange English muffin halves, cut-side up, on a baking sheet. Spoon 1 to 2 tablespoons pizza sauce onto each
+        English muffin; top with mozzarella cheese. Place pepperoni slices on 1/3 the pizzas and Italian sausage on 1/3
+        the English muffins, leaving the remaining 1/3 with just cheese.</li>
+      <li>Bake in the preheated oven until cheese is melted, about 10 minutes.</li>
+    </ol>
+  </main>
 </body>
 
 </html>
